traffic-rollout/app/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-stable-service
  namespace: release-lab
spec:
  selector:
    app: rollout-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
