traffic-rollout/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-ingress
  namespace: release-lab
spec:
  ingressClassName: nginx
  rules:
    - host: rollout.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollout-stable-service
                port:
                  number: 80
